<resources>
    <string name="app_name">Aurora Charities</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signInBtnStr">Sign In</string>

    <string name="AddRequestPage">Create/Edit Request</string>
    <string name="NameLabelStr">Name of item</string>
    <string name="EnterNameHintStr">Enter name of item:</string>
    <string name="ItemDescriptionStr">Describe the item (keywords, sentences, etc):</string>
    <string name="TagLabelStr">Tags</string>
    <string name="CategoryDropDown">Categories</string>
    <string name="TagTypeStr">Tag Type: (Ex. Size, Color, Quantity)</string>
    <string name="DescriptionStr">Item Description</string>
    <string name="continueCharity">Continue to Charity</string>
    <string name="continueIndiv">Continue to Individual</string>
    <string name="adminActivityWelcomeMSG">Welcome INSERT CHARITY</string>

    <string-array name="categories">
        <item>Smaller toys/games (e.g. legos, jenga, RC cars)</item>
        <item>Bikes, skooters, skateboards</item>
        <item>Summer clothes</item>
        <item>Winter clothes and gear</item>
        <item>Hygiene items</item>
    </string-array>

    //charity home page strings
    <string name="charityNameStr">*charity name</string>
    <string name="makeRequestsStr">Create a New Request</string>
    <string name="viewRequestsStr">Create and Edit Requests</string>
    <string name="updateAbtUsStr">Update About Us Page</string>

    //about us view page strings
    <string name="mottoStr">*motto</string>
    <string name="emailStr">*email</string>
    <string name="addressStr">*address</string>
    <string name="phoneNumberStr">*phonenumber</string>

    //about us edit page strings
    <string name="editMottoHint">Enter a motto or brief description</string>
    <string name="editEmailHInt">Enter an email</string>
    <string name="editPhoneHint">Enter a phone number</string>
    <string name="editAddressHint">Enter an address</string>

    <string name="loginCharity">Charity Login</string>
    <string name="addRequest_SubmitButton">Submit</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="underConstructionStr">Under Construction</string>

    <string name="signOutButton">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Activity Add Request -->
    <string name="ageTagStr">Age</string>
    <string name="sizeTagStr">Size</string>
    <string name="categoriesTagStr">Categories</string>
    <string name="conditionTagStr">Condition</string>
    <string name="searchStr">Search</string>
    <string name="requestNameStr">Request Name</string>
    <string name="requestCharityStr">Request Charity</string>
    <string name="requestDescriptionStr">Description</string>

    <string-array name="ageTagArr">
        <item>Infant</item>
        <item>Toddler</item>
        <item>Kid (Ages 5+)</item>
        <item>Teenager</item>
        <item>Adult</item>
        <item>Elderly</item>
    </string-array>

    <string-array name="sizeTagArr">
        <item>XS</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>

    <string-array name="conditionTagArr">
        <item>New</item>
        <item>Used</item>
    </string-array>

    <string-array name="categoriesTagArr">
        <item>Clothing</item>
        <item>Winter Gear</item>
        <item>Athletic Gear</item>
        <item>Club and Summer Program Supplies</item>
        <item>School Supplies</item>
        <item>Hygiene and Toiletries</item>
        <item>Toys and Games</item>
        <item>Other</item>
    </string-array>

    <string name="registerUser"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdy3T6zJoR8fnnMNKWJLvcC6ScOzKO-Qf-uv2u_KukN4pjyog/viewform?usp=sf_link">Register as a Charity</a></string>
</resources>