<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/backButton3"
            android:layout_width="60dp"
            android:layout_height="51dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="backButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/charityViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:text="@string/underConstructionStr"
            android:text="@string/charityNameStr"
            android:textColor="#024A97"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="206dp"
            android:layout_height="231dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="75dp"
            android:background="#024A97"
            android:backgroundTintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/charityViewName"
            app:srcCompat="@drawable/ic_a4g_logo__svg_" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editMotto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/editMottoHint"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/editEmailHInt"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMotto" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/editPhoneHint"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/editAddressHint"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPhone"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/aboutUsSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addRequest_SubmitButton"
            app:layout_constraintTop_toBottomOf="@+id/editAddress"
            tools:layout_editor_absoluteX="151dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>