<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    tools:context=".HomeScreenActivity">

    <Button
        android:id="@+id/continueToIndividual"
        android:layout_width="493dp"
        android:layout_height="125dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#024A97"
        android:onClick="onClick"
        android:shadowRadius="5"
        android:text="@string/continueIndiv"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueToCharity" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_a4g_logo__svg_" />

    <Button
        android:id="@+id/continueToCharity"
        android:layout_width="493dp"
        android:layout_height="125dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#024A97"
        android:onClick="onClick"
        android:shadowRadius="5"
        android:text="@string/continueCharity"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>